--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
         <h2>Contact Me</h2>
         <p>Let's connect! You can find me on:</p>
         <div class="social-links">
-            <a href="https://linkedin.com/in/yourprofile" target="_blank" class="btn">LinkedIn</a>
-            <a href="https://github.com/yourusername" target="_blank" class="btn">GitHub</a>
+            <a href="https://www.linkedin.com/in/guilherme-serra-sevilha-viegas-8b9bb2109/" target="_blank" class="btn">LinkedIn</a>
+            <a href="https://github.com/gssv99" target="_blank" class="btn">GitHub</a>
         </div>
     </section>
 
