Added TM project

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,14 @@
         <h2>My Projects</h2>
         <div class="project-card">
             <h3>Expenses Tracker</h3>
-            <p>A simple web app to track daily expenses, built with Python and Flask.</p>
-            <a href="#" class="btn">View Project</a>
+            <p>A simple web app to track daily expenses, built with Python, Flask, Html, css and Javascript.</p>
+            <a href="https://guilhermeserra.pythonanywhere.com/" class="btn">View Project</a>
         </div>
-        <!-- Add more project cards here -->
+        <div class="project-card">
+            <h3>Task Manager</h3>
+            <p>A simple personal Task Manager, inspired by Trello, built with Python, Flask, Html, css and Javascript.</p>
+            <a href=" " class="btn">View Project</a>
+        </div>
     </section>
 
     <!-- Contact Section -->
