Added projecrts and corrected some minor presentation issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,14 @@
 
     <!-- Home Section -->
     <section id="home" class="hero">
-        <h1>Bem vindo ao meu portfolio</h1>
-        <p>Abaixo encontram-se meu projetos pessoais como dev.</p>
+        <h1>Guiherme Serra</h1>
+        <p>Abaixo encontram-se alguns dos meus projetos pessoais como dev.</p>
         <a href="#projects" class="btn">Ver projetos</a>
     </section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
-        <h2></h2>
+        <h2>Projetos com Demos disponíveis:</h2>
         <div class="project-card">
             <h3>Expenses Tracker</h3>
             <p>Uma aplicação web simples, para controlar finanças pessoais.</p>
@@ -47,6 +47,16 @@
             <p>- CSS</p>
             <p>- HTML</p>
             <a href="https://taskmanager-i7kt.onrender.com" class="btn">Ver projeto</a>
+        </div>
+        <h2>Projetos com Demos disponíveis apenas no Github:</h2>
+        <div class="project-card">
+            <h3>Background Remover</h3>
+            <p>Uma executável que utiliza as Python Libs: rembg e PIL; para remover o fundo de imagens </p>
+            <p>Stacks:</p>
+            <p>- Python</p>
+            <p>- PIL</p>
+            <p>- rembg</p>
+            <a href="https://github.com/gssv99/RmvBgdImg" class="btn">Ver repositório</a>
         </div>
     </section>
 
