--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
     <!-- Home Section -->
     <section id="home" class="hero">
-        <h1>Guiherme Serra</h1>
+        <h1>Guilherme Serra</h1>
         <p>Abaixo encontram-se alguns dos meus projetos pessoais como dev.</p>
         <a href="#projects" class="btn">Ver projetos</a>
     </section>
